# pass_gen

./: Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.h.in  config.status  configure  configure.ac  configure.old  configure.scan  input  main.c  output  pass_gen  pass_gen.c  pass_gen.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: Makefile  Makefile.am  Makefile.in  README  questions  questions_extended
doc/: Makefile  Makefile.in
examples/: Makefile  Makefile.am  Makefile.in  examples
man/: Makefile  Makefile.am  Makefile.in
scripts/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  a.out  ask  ask.c  build_input.c  output  pass_gen  pass_gen.c  pass_gen.h
src/.deps/: ask.Po  pass_gen.Po  transforms.Po
src/misc/: Makefile.old  v1.c  v1.h
src/transforms/: README  TODO  append_numbers.c  append_numbers.h  buffer_tools.c  characters.c  characters.h  numbers.c  numbers.h  replace_chars.c  replace_chars.h  symbols.c  symbols.h  transforms.c
src/transforms/.deps/: append_numbers.Po  characters.Po  numbers.Po  replace_chars.Po  symbols.Po  transforms.Po
src/utils/: buffer_tools.c  buffer_tools.h  build_input.c  build_input.h  file_tools.c  file_tools.h
src/utils/.deps/: buffer_tools.Po  build_input.Po  file_tools.Po
transforms/: Makefile  NOTES  misc.c  misc.h  output  output2  pass1  pass2  pass3  pass_gen  pass_gen.c  pass_gen.h  transforms.c  transforms.h  try1.c  try1.h
